# dots-example-gsp

./: CMakeLists.txt  README.md  run.ps1  run.sh
models/gsp-model/: CMakeLists.txt
models/gsp-model/src/: alarm.dots  sensor.dots
services/alarm-service/: CMakeLists.txt
services/alarm-service/src/: AlarmService.cpp  AlarmService.h  main.cpp
services/hmi-service/: CMakeLists.txt
services/hmi-service/src/: CousineRegular.h  GlfwOpenGl3Backend.cpp  MainWindow.cpp  MainWindow.h  main.cpp
services/sensor-service/: CMakeLists.txt
services/sensor-service/src/: SensorService.cpp  SensorService.h  main.cpp
